<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/foncat1">

    <Button
        android:id="@+id/btn_photo"
        style="@style/Widget.Material3.Button"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="25dp"
        android:background="@color/purple"
        android:onClick="startPhotoActivity"
        android:text="@string/btn_photo"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="200dp"
        android:background="@color/purple"
        android:onClick="startListActivity"
        android:text="@string/btn_list"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_photo" />

    <TextView
        android:id="@+id/tV_sel_res"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/sel_res"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/darkpurple"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/tV_lay_act"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/layout_activity"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>