<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityList"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ScrollView
        android:layout_width="390dp"
        android:layout_height="480dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="174dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/photo_description"
                    app:srcCompat="@drawable/belgcat" />

                <TextView
                    android:id="@+id/textViewbelg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/photo_belg"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="60dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="23dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo_description"
                    app:srcCompat="@drawable/britcat" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photo_brit"
                    android:layout_gravity="center|center_vertical"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="185dp"
                    tools:layout_editor_absoluteY="140dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="23dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo_description"
                    app:srcCompat="@drawable/meincat" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photo_cun"
                    android:layout_gravity="center|center_vertical"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="220dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="39dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo_description"
                    app:srcCompat="@drawable/perscat" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photo_pers"
                    android:layout_gravity="center|center_vertical"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="300dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="8dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo_description"
                    app:srcCompat="@drawable/sfinkcat" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photo_sfin"
                    android:layout_gravity="center|center_vertical"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="380dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="24dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/photo_description"
                    app:srcCompat="@drawable/siamcat" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photo_siam"
                    android:layout_gravity="center|center_vertical"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="113dp"
        android:onClick="goBackList"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>